@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-05-30 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add a test to the cloudi_service_db_pgsql ct test
+
+2014-05-30 Drew Varner     <drew.varner [at] ninefx (dot) com>
+
+    * Fix the service application include file type spec
+
 2014-05-29 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Improvement for websocket_subscriptions in cloudi_service_http_cowboy
